--- a/RDPInterceptor/MainWindow.xaml
+++ b/RDPInterceptor/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="RDPInterceptor" Height="300" Width="500" ResizeMode="NoResize">
     <Grid>
-        <Button Content="Start Intercept" Click="StartCaptureClick" Style="{StaticResource ButtonSuccess}" Width="111" HorizontalAlignment="Left" Margin="44,222,0,0" VerticalAlignment="Top" Height="30"/>
-        <Button Content="Stop Intercept" Click="StopCaptureClick" Style="{StaticResource ButtonDanger}" Margin="172,222,0,0" VerticalAlignment="Top" Width="110" Height="30" HorizontalAlignment="Left"/>
+        <Button x:Name="StartCapture" Content="Start Intercept" Click="StartCaptureClick" Style="{StaticResource ButtonSuccess}" Width="111" HorizontalAlignment="Left" Margin="44,222,0,0" VerticalAlignment="Top" Height="30"/>
+        <Button x:Name="StopCapture" Content="Stop Intercept" Click="StopCaptureClick" Style="{StaticResource ButtonDanger}" Margin="172,222,0,0" VerticalAlignment="Top" Width="110" Height="30" HorizontalAlignment="Left"/>
         <Button Content="Logs" Click="LogButtonClick" Style="{StaticResource ButtonInfo}" HorizontalAlignment="Stretch" Margin="295,222,115,0" VerticalAlignment="Top" Height="30" />
         <TextBox x:Name="InputTextBox" Margin="44,156,173,74"/>
         <Button Content="Submit" Click="ConfirmClick" HorizontalAlignment="Left" Margin="332,156,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.372,1.021" Height="32" Width="65"/>
