--- a/RDPInterceptor/Setting.xaml
+++ b/RDPInterceptor/Setting.xaml
@@ -1,20 +1,29 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:RDPInterceptor"
-        xmlns:hc="https://handyorg.github.io/handycontrol" x:Class="RDPInterceptor.Setting"
-        mc:Ignorable="d"
-        Title="Setting" Height="280" Width="504">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:RDPInterceptor"
+    xmlns:hc="https://handyorg.github.io/handycontrol" x:Class="RDPInterceptor.Setting"
+    mc:Ignorable="d"
+    Title="Setting" Height="280" Width="504">
     <Grid Margin="0,0,0,-5">
-        <CheckBox x:Name="WhiteListModeCheck" Content="Enable Whitelist" HorizontalAlignment="Left" Margin="26,67,0,0" VerticalAlignment="Top" Height="30" Width="130" Unchecked="WhiteListModeEvent" Checked="WhiteListModeEvent"/>
-        <CheckBox x:Name="IpLogCheck" Content="Enable IP Log" HorizontalAlignment="Left" Margin="245,67,0,0" VerticalAlignment="Top" Height="30" Width="130" Unchecked="WriteIpLogEvent" Checked="WriteIpLogEvent"/>
-        <hc:SimpleText x:Name="ModeSelection" HorizontalAlignment="Left" Text="Mode" FontSize="15" Height="40" Margin="26,42,0,0" VerticalAlignment="Top" Width="130" />
-        <hc:SimpleText x:Name="Utils" HorizontalAlignment="Left" Text="Utils" FontSize="15" Height="40" Margin="245,42,0,0" VerticalAlignment="Top" Width="130" />
-        <hc:TextBox x:Name="RdpPort" HorizontalAlignment="Left" Margin="240,162,0,0" TextWrapping="Wrap" FontSize="15" hc:InfoElement.Title="RDP Port" TextChanged="RdpPortEvent" VerticalAlignment="Top" Width="120"/>
-        <CheckBox x:Name="DebugLog" Content="Debug Log" HorizontalAlignment="Left" Margin="245,97,0,0" VerticalAlignment="Top" Height="30" Width="130" Unchecked="LogDebug" Checked="LogDebug"/>
-        <hc:TextBox x:Name="WebPort" HorizontalAlignment="Left" Margin="365,162,0,0" TextWrapping="Wrap" FontSize="15" hc:TitleElement.Title="WebUI Port" TextChanged="WebUIPortEvent" VerticalAlignment="Top" Width="120"/>
-        <CheckBox x:Name="ConnectionLog" Content="Log Connection" HorizontalAlignment="Left" Margin="245,127,0,0" VerticalAlignment="Top" Height="30" Width="130" Unchecked="LogDebug" Checked="ConnectionLogEvent"/>
+        <CheckBox x:Name="WhiteListModeCheck" Content="Enable Whitelist" HorizontalAlignment="Left" Margin="26,67,0,0"
+                  VerticalAlignment="Top" Height="30" Width="130" Unchecked="WhiteListModeEvent"
+                  Checked="WhiteListModeEvent" />
+        <CheckBox x:Name="IpLogCheck" Content="Enable IP Log" HorizontalAlignment="Left" Margin="245,67,0,0"
+                  VerticalAlignment="Top" Height="30" Width="130" Unchecked="WriteIpLogEvent" Checked="WriteIpLogEvent" />
+        <hc:SimpleText x:Name="ModeSelection" HorizontalAlignment="Left" Text="Mode" FontSize="15" Height="40"
+                       Margin="26,42,0,0" VerticalAlignment="Top" Width="130" />
+        <hc:SimpleText x:Name="Utils" HorizontalAlignment="Left" Text="Utils" FontSize="15" Height="40"
+                       Margin="245,42,0,0" VerticalAlignment="Top" Width="130" />
+        <hc:TextBox x:Name="RdpPort" HorizontalAlignment="Left" Margin="240,162,0,0" TextWrapping="Wrap" FontSize="15"
+                    hc:InfoElement.Title="RDP Port" TextChanged="RdpPortEvent" VerticalAlignment="Top" Width="120" />
+        <CheckBox x:Name="DebugLog" Content="Debug Log" HorizontalAlignment="Left" Margin="245,97,0,0"
+                  VerticalAlignment="Top" Height="30" Width="130" Unchecked="LogDebug" Checked="LogDebug" />
+        <hc:TextBox x:Name="WebPort" HorizontalAlignment="Left" Margin="365,162,0,0" TextWrapping="Wrap" FontSize="15"
+                    hc:TitleElement.Title="WebUI Port" TextChanged="WebUIPortEvent" VerticalAlignment="Top" Width="120" />
+        <CheckBox x:Name="ConnectionLog" Content="Log Connection" HorizontalAlignment="Left" Margin="245,127,0,0"
+                  VerticalAlignment="Top" Height="30" Width="130" Unchecked="LogDebug" Checked="ConnectionLogEvent" />
     </Grid>
 </Window>
