--- a/RDPInterceptor/Setting.xaml
+++ b/RDPInterceptor/Setting.xaml
@@ -24,6 +24,6 @@
         <hc:TextBox x:Name="WebPort" HorizontalAlignment="Left" Margin="365,162,0,0" TextWrapping="Wrap" FontSize="15"
                     hc:TitleElement.Title="WebUI Port" TextChanged="WebUIPortEvent" VerticalAlignment="Top" Width="120" />
         <CheckBox x:Name="ConnectionLog" Content="Log Connection" HorizontalAlignment="Left" Margin="245,127,0,0"
-                  VerticalAlignment="Top" Height="30" Width="130" Unchecked="LogDebug" Checked="ConnectionLogEvent" />
+                  VerticalAlignment="Top" Height="30" Width="130" Unchecked="ConnectionLogEvent" Checked="ConnectionLogEvent" />
     </Grid>
 </Window>
